manifests/tcc-manifests/Frontend/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  selector: 
    app: frontend
  ports:
  - name: http
    port: 8082
    targetPort: 80
  type: ClusterIP
